[gd_scene load_steps=8 format=3 uid="uid://2rwfumsr57nv"]

[ext_resource type="Script" path="res://assets/scripts/settings.gd" id="1_i30ps"]
[ext_resource type="PackedScene" uid="uid://ds06mwhee8ygm" path="res://game_settings/components/slider/slider.tscn" id="2_gmhvn"]
[ext_resource type="Script" path="res://game_settings/components/slider/slider.gd" id="3_0w7yl"]
[ext_resource type="Theme" uid="uid://x6k7y2aew8c4" path="res://assets/themes/baseUITheme.tres" id="3_5fbwo"]
[ext_resource type="Resource" uid="uid://dc1onac6nlsg5" path="res://game_settings/settings/audio/audio_buses/master.tres" id="5_uteyw"]
[ext_resource type="Resource" uid="uid://14361erav2ke" path="res://game_settings/settings/audio/audio_buses/music.tres" id="6_f7mkl"]
[ext_resource type="PackedScene" uid="uid://c764ydkcfktih" path="res://game_settings/components/_misc_components/apply_btn/apply_btn.tscn" id="8_loqdb"]

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i30ps")

[node name="Main" type="Control" parent="."]
anchors_preset = 0

[node name="Audio" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -156.0
offset_right = 104.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
text = "AUDIO_SETTINGS"

[node name="Video" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -68.0
offset_right = 104.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "VIDEO_SETTINGS"

[node name="Gameplay" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 20.0
offset_right = 104.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
text = "GAMEPLAY_SETTINGS"

[node name="Return" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 108.0
offset_right = 104.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
text = "RETURN_TO_MAIN_MENU"

[node name="AudioSettings" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="Master" type="Label" parent="AudioSettings"]
layout_mode = 0
offset_left = -112.0
offset_top = -236.0
offset_right = 112.0
offset_bottom = -197.0
text = "MASTER_VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" parent="AudioSettings/Master" groups=["audio"] instance=ExtResource("2_gmhvn")]
layout_mode = 0
offset_top = 39.0
offset_right = 224.0
offset_bottom = 79.0
theme = ExtResource("3_5fbwo")
script = ExtResource("3_0w7yl")
setting = ExtResource("5_uteyw")
grab_focus_on_mouse_over = true

[node name="Slider" parent="AudioSettings/Master/Slider" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_5fbwo")

[node name="Music" type="Label" parent="AudioSettings"]
layout_mode = 0
offset_left = -112.0
offset_top = -116.0
offset_right = 112.0
offset_bottom = -76.0
text = "MUSIC_VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" parent="AudioSettings/Music" groups=["audio"] instance=ExtResource("2_gmhvn")]
layout_mode = 0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 80.0
theme = ExtResource("3_5fbwo")
script = ExtResource("3_0w7yl")
setting = ExtResource("6_f7mkl")
grab_focus_on_mouse_over = true

[node name="Slider" parent="AudioSettings/Music/Slider" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_5fbwo")

[node name="SFX" type="Label" parent="AudioSettings"]
layout_mode = 0
offset_left = -112.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 44.0
text = "SFX_VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" parent="AudioSettings/SFX" groups=["audio"] instance=ExtResource("2_gmhvn")]
layout_mode = 0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 80.0
theme = ExtResource("3_5fbwo")
script = ExtResource("3_0w7yl")
setting = ExtResource("6_f7mkl")
grab_focus_on_mouse_over = true

[node name="Slider" parent="AudioSettings/SFX/Slider" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_5fbwo")

[node name="Cancel" type="Button" parent="AudioSettings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 156.0
offset_right = 256.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
text = "RETURN_SETTINGS"

[node name="Save" parent="AudioSettings" instance=ExtResource("8_loqdb")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -256.0
offset_top = 156.0
offset_right = -64.0
offset_bottom = 204.0
grow_horizontal = 1
grow_vertical = 1
text = "SAVE_SETTINGS"
group = "audio"
grab_focus_on_mouse_over = true

[node name="VideoSettings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="GameplaySettings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[connection signal="pressed" from="Main/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Main/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="AudioSettings/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="AudioSettings/Save" to="." method="_on_cancel_pressed"]

[editable path="AudioSettings/Master/Slider"]
[editable path="AudioSettings/Music/Slider"]
[editable path="AudioSettings/SFX/Slider"]
